url-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-server-deployment-${VERSION}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-server
      version: ${VERSION}
  template:
    metadata:
      labels:
        app: url-server
        version: ${VERSION}
    spec:
      containers:
      - name: url-server-container
        imagePullPolicy: Always
        image: ninjaonions/urlserver:${VERSION}
