ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: url-server-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: ui-server-service
    servicePort: 3000
  rules:
  - host: zen.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: ui-server-service
          servicePort: 3000
  - host: zen.xyz
    http:
      paths:
      - path: /api
        backend:
          serviceName: url-server-service
          servicePort: 3000
  - http:
      paths:
      - path: /
        backend:
          serviceName: ui-server-service
          servicePort: 3000
